# AutoClicker

./: .bumpversion.cfg  .gitignore  AutoClicker.spec  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  VERSIONING.md  __version__.py  autoclicker.py  build.bat  build.py  bump_version.py  pyproject.toml  requirements.txt  run.bat  run.py
.github/workflows/: auto-version.yml  release.yml
core/: __init__.py  app_controller.py
models/: __init__.py  event.py  event_recorder.py  hotkey_manager.py  player.py  recorder.py  spam_clicker.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_recorder_playback.py
tests/regression/: __init__.py  test_regression.py
tests/unit/: __init__.py  test_deadlock_prevention.py  test_event_recorder.py  test_file_manager.py  test_hotkey_manager.py  test_spam_clicker.py
ui/: __init__.py  banner.py  main_window.py
ui/widgets/: __init__.py  control_widget.py  event_log_widget.py  hotkey_info_widget.py  hotkey_widget.py  settings_widget.py  status_widget.py
utils/: __init__.py  constants.py  file_manager.py  key_utils.py
